feat(layout): create basic admin layout, add some widgets

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -12,3 +12,11 @@ body {
   font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #333;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 300;
+}
+
+h2 {
+  font-size: 36px;
+}
