feat(todo, pages): add todo component, move widget title to separate component, add widget layout buttons, fix leaflet script

--- a/app/elements/components/pa-search.html
+++ b/app/elements/components/pa-search.html
@@ -33,15 +33,15 @@
         left: 8px;;
       }
 
-      :host /deep/ .paper-input-container-0 .input-content.paper-input-container input {
+      :host::shadow .paper-input-container-0 .input-content.paper-input-container input {
         color: #fff;
       }
 
-      :host /deep/ .paper-input-container-0 .unfocused-line.paper-input-container {
+      :host::shadow .paper-input-container-0 .unfocused-line.paper-input-container {
         background: transparent;
       }
 
-      :host /deep/ .paper-input-container-0 .focused-line.paper-input-container {
+      :host::shadow .paper-input-container-0 .focused-line.paper-input-container {
         background: #fff;
       }
 
