--- a/app/elements/components/pa-simple-grid.html
+++ b/app/elements/components/pa-simple-grid.html
@@ -13,45 +13,45 @@
         flex-wrap: wrap;
       }
 
-      :host /deep/ > * {
+      :host::shadow > * {
         box-sizing: border-box;
         display: block;
         padding: 0 15px;
         width: 100%;
       }
 
-      :host[xs-cols='1'] /deep/ > * { width: 100%; }
-      :host[xs-cols='2'] /deep/ > * { width: 50%; }
-      :host[xs-cols='3'] /deep/ > * { width: 33.33333333%; }
-      :host[xs-cols='4'] /deep/ > * { width: 25%; }
-      :host[xs-cols='5'] /deep/ > * { width: 20%; }
-      :host[xs-cols='6'] /deep/ > * { width: 16.66666667%; }
+      :host[xs-cols='1']::shadow > * { width: 100%; }
+      :host[xs-cols='2']::shadow > * { width: 50%; }
+      :host[xs-cols='3']::shadow > * { width: 33.33333333%; }
+      :host[xs-cols='4']::shadow > * { width: 25%; }
+      :host[xs-cols='5']::shadow > * { width: 20%; }
+      :host[xs-cols='6']::shadow > * { width: 16.66666667%; }
 
       @media (min-width: 768px) {
-        :host[sm-cols='1'] /deep/ > * { width: 100%; }
-        :host[sm-cols='2'] /deep/ > * { width: 50%; }
-        :host[sm-cols='3'] /deep/ > * { width: 33.33333333%; }
-        :host[sm-cols='4'] /deep/ > * { width: 25%; }
-        :host[sm-cols='5'] /deep/ > * { width: 20%; }
-        :host[sm-cols='6'] /deep/ > * { width: 16.66666667%; }
+        :host[sm-cols='1']::shadow > * { width: 100%; }
+        :host[sm-cols='2']::shadow > * { width: 50%; }
+        :host[sm-cols='3']::shadow > * { width: 33.33333333%; }
+        :host[sm-cols='4']::shadow > * { width: 25%; }
+        :host[sm-cols='5']::shadow > * { width: 20%; }
+        :host[sm-cols='6']::shadow > * { width: 16.66666667%; }
       }
 
       @media (min-width: 992px) {
-        :host[md-cols='1'] /deep/ > * { width: 100%; }
-        :host[md-cols='2'] /deep/ > * { width: 50%; }
-        :host[md-cols='3'] /deep/ > * { width: 33.33333333%; }
-        :host[md-cols='4'] /deep/ > * { width: 25%; }
-        :host[md-cols='5'] /deep/ > * { width: 20%; }
-        :host[md-cols='6'] /deep/ > * { width: 16.66666667%; }
+        :host[md-cols='1']::shadow > * { width: 100%; }
+        :host[md-cols='2']::shadow > * { width: 50%; }
+        :host[md-cols='3']::shadow > * { width: 33.33333333%; }
+        :host[md-cols='4']::shadow > * { width: 25%; }
+        :host[md-cols='5']::shadow > * { width: 20%; }
+        :host[md-cols='6']::shadow > * { width: 16.66666667%; }
       }
 
       @media (min-width: 1200px) {
-        :host[lg-cols='1'] /deep/ > * { width: 100%; }
-        :host[lg-cols='2'] /deep/ > * { width: 50%; }
-        :host[lg-cols='3'] /deep/ > * { width: 33.33333333%; }
-        :host[lg-cols='4'] /deep/ > * { width: 25%; }
-        :host[lg-cols='5'] /deep/ > * { width: 20%; }
-        :host[lg-cols='6'] /deep/ > * { width: 16.66666667%; }
+        :host[lg-cols='1']::shadow > * { width: 100%; }
+        :host[lg-cols='2']::shadow > * { width: 50%; }
+        :host[lg-cols='3']::shadow > * { width: 33.33333333%; }
+        :host[lg-cols='4']::shadow > * { width: 25%; }
+        :host[lg-cols='5']::shadow > * { width: 20%; }
+        :host[lg-cols='6']::shadow > * { width: 16.66666667%; }
       }
     </style>
 
