fix(styles): minor styles fixes

--- a/app/elements/components/pa-search.html
+++ b/app/elements/components/pa-search.html
@@ -4,6 +4,11 @@
   <template>
     <style include="shared-styles"></style>
     <style>
+
+      :host > paper-icon-button {
+        margin-right: 13px;
+      }
+
       .pa-search-form {
         display: none;
         width: 100%;
@@ -11,7 +16,7 @@
         position: absolute;
         left: 0;
         top: 0;
-        padding: 0 58px 0 74px;
+        padding: 0 40px 0 74px;
         box-sizing: border-box;
         background: #3F51B5;
         z-index: 2;
