--- a/app/elements/components/pa-profile-picture.html
+++ b/app/elements/components/pa-profile-picture.html
@@ -5,7 +5,7 @@
     <style include="shared-styles"></style>
     <style>
       .userpic {
-        border: 1px dotted #ccc;
+        border: 1px solid #A0C3FF;
         width: 202px;
         height: 202px;
         position: relative;
@@ -75,7 +75,7 @@
         properties: {
           src: {
             type: String,
-            value: "../../images/no-photo.png"
+            value: "../../images/no-photo.jpg"
           }
         },
 
