--- a/app/elements/components/pa-profile-picture.html
+++ b/app/elements/components/pa-profile-picture.html
@@ -75,7 +75,7 @@
         properties: {
           src: {
             type: String,
-            value: "../../images/no-photo.jpg"
+            value: '../../images/no-photo.jpg'
           }
         },
 
