--- a/app/elements/components/pa-search.html
+++ b/app/elements/components/pa-search.html
@@ -97,7 +97,7 @@
         },
 
         searchOnEnter: function(e) {
-          if (e.keyCode == 13) {
+          if (e.keyCode === 13) {
             this.searchInGoogle();
           }
         }
