feat(toast): add toast notifications to show that profile informations is saving to firebase db, fix footer layout

--- a/app/elements/components/pa-footer.html
+++ b/app/elements/components/pa-footer.html
@@ -5,8 +5,9 @@
       :host {
         @apply(--layout);
         @apply(--layout-horizontal);
-        padding: 0 36px 16px;
+        padding: 0 36px 15px;
         font-size: 13px;
+        margin-top: -32px;
       }
 
       .akveo-link a {
